force-app/main/default/objects/Resume_questionnaire__c/Resume_questionnaire__c.object-meta.xml
<CustomObject>
    <description>Objet parent lié aux client des réponses pour un questionnaire (SATCLI, autre...)</description>
    <label>Résumé questionnaire</label>
    <nameField>
        <displayFormat>RQ/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Résumés questionnaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>