force-app/main/default/objects/Resume_questionnaire__c/fields/canalSaisie__c.field-meta.xml
<CustomField>
    <fullName>canalSaisie__c</fullName>
    <description>Canal de saisie (par le client ou par un TA)</description>
    <formula>IF(ISPICKVAL(Owner:User.UserType,&apos;Guest&apos;), &apos;Client&apos;, &apos;K par K&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de saisie</label>
    <type>Text</type>
</CustomField>