force-app/main/default/objects/Resume_questionnaire__c/fields/clientEstSatisfait__c.field-meta.xml
<CustomField>
    <fullName>clientEstSatisfait__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ à true lorsque satisfcation &gt;= 7</description>
    <label>Est-ce que le client est satisfait ?</label>
    <type>Checkbox</type>
</CustomField>