force-app/main/default/objects/Resume_questionnaire__c/fields/compte__c.field-meta.xml
<CustomField>
    <fullName>compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Résumés questionnaire</relationshipLabel>
    <relationshipName>Resumes_questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>