force-app/main/default/objects/Resume_questionnaire__c/fields/contrat__c.field-meta.xml
<CustomField>
    <fullName>contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat</label>
    <referenceTo>KContrat__c</referenceTo>
    <relationshipLabel>Résumés questionnaire</relationshipLabel>
    <relationshipName>Resumes_questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>