force-app/main/default/objects/Resume_questionnaire__c/fields/dateQuestionnaire__c.field-meta.xml
<CustomField>
    <fullName>dateQuestionnaire__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date de réponse au questionnaire (validation)</description>
    <label>Date du questionnaire</label>
    <type>Date</type>
</CustomField>