force-app/main/default/objects/Resume_questionnaire__c/fields/GDPR_dernierEssai__c.field-meta.xml
<CustomField>
    <fullName>GDPR_dernierEssai__c</fullName>
    <description>Date/heure de dernier essai de la suppression (avec échec de cet enregistrement)</description>
    <label>Date dernier essai (GDPR)</label>
    <type>DateTime</type>
</CustomField>