force-app/main/default/objects/Resume_questionnaire__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Résumés questionnaire</relationshipLabel>
    <relationshipName>SurveySummaries</relationshipName>
    <type>Lookup</type>
</CustomField>