force-app/main/default/objects/Resume_questionnaire__c/fields/projet__c.field-meta.xml
<CustomField>
    <fullName>projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Résumés questionnaire</relationshipLabel>
    <relationshipName>Resumes_questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>