force-app/main/default/objects/Resume_questionnaire__c/fields/questionnaire__c.field-meta.xml
<CustomField>
    <fullName>questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Résumés questionnaire</relationshipLabel>
    <relationshipName>Resumes_questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>