force-app/main/default/objects/Resume_questionnaire__c/fields/requete__c.field-meta.xml
<CustomField>
    <fullName>requete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Résumés questionnaire</relationshipLabel>
    <relationshipName>Resumes_questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>