force-app/main/default/objects/Resume_questionnaire__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>questionnaire__c</columns>
    <columns>compte__c</columns>
    <columns>contrat__c</columns>
    <columns>canalSaisie__c</columns>
    <columns>dateQuestionnaire__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>